fix hover on mobile

--- a/src/components/Audio/Audio.module.scss
+++ b/src/components/Audio/Audio.module.scss
@@ -29,18 +29,20 @@
       border-bottom: 7px solid transparent;
    }
 }
-.controls:hover {
-   background-color: rgba(164, 69, 237);
-   @media (max-width: 767.98px) {
+@media (hover: hover) and (pointer: fine) {
+   .controls:hover {
       background-color: rgba(164, 69, 237);
+      @media (max-width: 767.98px) {
+         background-color: rgba(164, 69, 237);
+      }
    }
-}
-.controls:hover::before {
-   border-left: 20px solid rgb(255, 255, 255);
-   @media (max-width: 767.98px) {
-      border-left: 13px solid rgb(255, 255, 255);
+   .controls:hover::before {
+      border-left: 20px solid rgb(255, 255, 255);
+      @media (max-width: 767.98px) {
+         border-left: 13px solid rgb(255, 255, 255);
+      }
    }
-}
+ }
 .active {
    background-color: rgba(164, 69, 237);
    @media (max-width: 767.98px) {
